--- a/awwards/templates/django_registration/registration_form.html
+++ b/awwards/templates/django_registration/registration_form.html
@@ -1,14 +1,17 @@
 {% extends 'base.html' %}
-{% load crispy_forms_tags %}
+{% load bootstrap5 %}
 
 {% block content %}
     <div class='container '>
     
         .<div class="shadow col-6 m-auto p-3 mb-5 bg-grey ">
             <h2 class='text-center'> Sign up</h2>
+            {% if form.errors %}
+                <p class="alert alert-danger"> Password or Username is incorrect </p>
+            {% endif %}
             <form method='POST'>
                 {% csrf_token %}
-                {{ form | crispy }} 
+                {% bootstrap_form form%} 
                 <input type="submit" class=" btn btn-outline-primary" value="Sign Up">
             </form>
         </div>
