--- a/awwards/templates/django_registration/registration_form.html
+++ b/awwards/templates/django_registration/registration_form.html
@@ -4,8 +4,12 @@
 {% block content %}
     <div class='container '>
     
-        .<div class="shadow col-6 m-auto p-3 mb-5 bg-grey ">
-            <h2 class='text-center'> Sign up</h2>
+        .<div class=" col-6 m-auto p-3 mb-5 bg-grey ">
+            <div class="panel-heading bg-dark p-3">
+                <h3 class="text-center text-light">Sign Up</h3>
+                </div>
+                <div class="pan">
+                  <div class="shadow  p-5 m-auto  rounded" style="background-color:rgb(255, 255, 255)">
             {% if form.errors %}
                 <p class="alert alert-danger"> Password or Username is incorrect </p>
             {% endif %}
