--- a/awwards/templates/navbar.html
+++ b/awwards/templates/navbar.html
@@ -6,37 +6,48 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<nav class="navbar bg-primary p-4  navbar-inverse">
-  <div class="container-fluid">
+<nav class="navbar sticky-top bg-dark p-4  navbar-inverse ">
+  <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand text-white" href="">Awwards</a>
+      <a class="navbar-brand text-white" href="/">Awwards</a>
     </div>
     <!-- Adding a serch form -->
     <div class="d-flex navbar-right">
-       <form class="nav-form"  role="search" action="">
+       <form class="nav-form"  role="search" action="{% url 'search_results' %}">
           <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search Article" name="article">
+            <input type="text" class="form-control" placeholder="Search Project" name="title'">
             <div class="input-group-btn">
-              <button class="btn  btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+              <button class="btn  btn-default" type="submit"></button>
             </div>
           </div>
        </form>
-       <div class="col">
+       <a href="{% url 'post_project' %}">
+
+       <button class="btn btn-sm btn-outline-info"  id="projects">Post Project</button>
+
+       </a>
+       <div class="col ml-4">
+         
         {% if user.is_authenticated %}
-        <div class=" dropdown" >
-            <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Account
+        <div class="dropdown" >
+          <li class="nav-item dropdown d-flex">
+            <a class="nav-link dropdown-toggle text-white " href="#" id="account" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <img class="rounded-circle img-fluid nav-img" src="{{ user.profile.profile_image.url }}" style="height:55px"  alt=""> 
+              {{user.username}}
             </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="">Home</a></li>
-              <li><a class="dropdown-item" href="">Create Article</a> </li>
+            <ul class="dropdown-menu" aria-labelledby="account">
+              <li><a class="dropdown-item" href="{%url 'index'%}">Home</a></li>
+              <li><a class="dropdown-item" href="{%url 'profile'%}">Profile</a></li>
               <li><a class="dropdown-item" href="/accounts/password/change">Change Password</a></li>
-              <li><a class="dropdown-item" href="/logout">Logout</a></li>
+              <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
             </ul>
+          </li>
           
         </div>
         {% else %}
-           <li class='navbar-nav'><a class='dropdown-item fw-bolder text-light' href="/accounts/login">Login</a></li>
+        <ul class="navbar-nav" >
+           <li><a class='dropdown-item btn btn-default text-light' href="/accounts/login">Login</a></li>
+        </ul>
         {% endif %}
       </div>
     </div>
