search form updates

--- a/awwards/templates/navbar.html
+++ b/awwards/templates/navbar.html
@@ -15,7 +15,7 @@
     <div class="d-flex navbar-right">
        <form class="nav-form"  role="search" action="{% url 'search_results' %}">
           <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search Project" name="title'">
+            <input type="text" class="form-control" placeholder="Search Project" name="title">
             <div class="input-group-btn">
               <button class="btn  btn-default" type="submit"></button>
             </div>
