--- a/awwards/templates/django_registration/registration_complete.html
+++ b/awwards/templates/django_registration/registration_complete.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 <div class="container">
-    <div class="container">
-        <div class="card text-center col-6 col-md-8 col-sm-10 m-auto">
+    
+        <div class=" shadow card text-center col-6 col-md-8 col-sm-10 m-auto">
             <h1 class=" text-center text-success">
                 Account created successfully
             </h1>
@@ -20,7 +20,7 @@
               <a href="/" class="btn btn-primary">Go Home</a>
             </div>            
           </div>
-    </div>
+    
 </div>
 {% endblock content %}
     
